--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -45,8 +45,8 @@ links:
   - title: Signature Programmes
     url: /signature-programmes/
     sublinks:
-      - title: Love Dance, Love Life!
-        url: /signature-programmes/love-dance-love-life/
+      - title: (LLP) Love Dance, Love Life!
+        url: /signature-programmes/llp-love-dance-love-life/
       - title: GastroChef
         url: /signature-programmes/physical-n-health-education-cca-n-aesthetics/gastrochef-with-a-cultural-twist
       - title: P1 Transition Programme
