--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -110,5 +110,7 @@ links:
         url: /info-hub/terms-of-use
       - title: Privacy Statement
         url: /info-hub/privacy-statement
+      - title: School Assessment Policy
+        url: /info-hub/school-assessment-policy
   - title: MOE Kindergarten
     collection: moe-kindergarten
