--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -18,7 +18,7 @@ collections:
       - Physical & Health Education/Programme for Active Learning (PAL).md
       - CIET/.keep
       - CIET/Curriculum, Innovation & Educational Technology.md
-      - CIET/Sustaining Gaia through Project Work.md
+      - CIET/(ALP) Sustaining Gaia.md
       - Pupil Well Being/.keep
       - Pupil Well Being/Pupil Well Being.md
       - Pupil Well Being/MOE Sexuality Education in Schools.md
