--- a/_signature-programmes/collection.yml
+++ b/_signature-programmes/collection.yml
@@ -7,4 +7,4 @@ collections:
       - GastroChef With A Cultural Twist.md
       - P1 Transition Programme.md
       - P6 Transition Programme.md
-      - Sustaining Gaia through Project Work.md
+      - (ALP) Sustaining Gaia.md
