--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -47,14 +47,14 @@ links:
     sublinks:
       - title: (LLP) Love Dance, Love Life!
         url: /signature-programmes/llp-love-dance-love-life/
-      - title: GastroChef
-        url: /signature-programmes/physical-n-health-education-cca-n-aesthetics/gastrochef-with-a-cultural-twist
+      - title: (ALP) Sustaining Gaia
+        url: /departments/curriculum-innovation-n-educational-technology/alp-sustaining-gaia/
       - title: P1 Transition Programme
         url: /student-development/p1-transition-programme/
       - title: P6 Transition Programme
         url: /student-development/primary-6-transition-programme-ready-sec-go/
-      - title: Sustaining Gaia through PW
-        url: /signature-programmes/sustaining-gaia-through-project-work/
+      - title: GastroChef
+        url: /signature-programmes/physical-n-health-education-cca-n-aesthetics/gastrochef-with-a-cultural-twist
   - title: CCAs
     url: /co-curricular-activities
     sublinks:
