--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,7 +32,7 @@ links:
         url: /departments/mother-tongue-languages
       - title: Physical & Health Education
         url: /departments/physical-n-health-education-cca-n-aesthetics
-      - title: CIE Technology
+      - title: CIET
         url: /departments/curriculum-innovation-n-educational-technology
       - title: Pupil Well Being
         url: /departments/pupil-well-being
