--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -106,5 +106,7 @@ links:
         url: /departments/pupil-well-being/moe-sexuality-education-in-schools
       - title: P1 Registration
         url: /info-hub/p1-registration/p1-registration-exercise
+      - title: Contact Information
+        url: /info-hub/contact-information
   - title: MOE Kindergarten
     collection: moe-kindergarten
