--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -16,6 +16,7 @@ collections:
       - Physical & Health Education/GastroChef With A Cultural Twist.md
       - Physical & Health Education/Values in Action (VIA) in CCA.md
       - Physical & Health Education/Programme for Active Learning (PAL).md
+      - CIET/Tink!SV.md
       - CIET/.keep
       - CIET/Curriculum, Innovation & Educational Technology.md
       - CIET/(ALP) Sustaining Gaia.md
