--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -19,7 +19,7 @@ collections:
       - CIET/.keep
       - CIET/Curriculum, Innovation & Educational Technology.md
       - CIET/(ALP) Sustaining Gaia.md
-      - CIET/Tink!SV.md
+      - CIET/Tink!SV (Learning Space).md
       - Pupil Well Being/.keep
       - Pupil Well Being/Pupil Well Being.md
       - Pupil Well Being/MOE Sexuality Education in Schools.md
