--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,7 +2,4 @@ show_reach: false
 faq: /faq/
 social_media:
   facebook: https://www.facebook.com/southviewpri/
-  linkedin: https://www.linkedin.com/company/YourAgency
-  twitter: https://www.twitter.com/YourTwitter
-  youtube: https://www.youtube.com/YourYoutube
-  instagram: https://www.instagram.com/your.insta/
+  instagram: https://www.instagram.com/southviens/
