--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Sitemap
+title: South View Primary School
 url: https://moe-southviewpri-staging.netlify.app
 favicon: /images/crest.gif
 colors:
