--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -27,7 +27,7 @@ collections:
       - Pupil Well Being/Modes of Communication with the School.md
       - Pupil Well Being/Parents Gateway.md
       - Pupil Well Being/Use of Photographs and Videos for School Publicity.md
-      - Pupil Well Being/The Oasis.md
+      - Pupil Well Being/The Oasis (Learning Space).md
       - Character & Citizenship Education.md
       - Student Development.md
       - Learners Profile and Education Support.md
