--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -2,4 +2,5 @@ collections:
   moe-kindergarten:
     output: true
     order:
+      - MK Announcements.md
       - MOE Kindergarten @ South View.md
