--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -3,4 +3,4 @@ collections:
     output: true
     order:
       - MOE Kindergarten @ South View.md
-      - MK Announcements.md
+      - 2023 MOE Kindergarten Open House.md
