--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,8 +40,8 @@ links:
         url: /departments/character-n-citizenship-education
       - title: Student Development
         url: /student-development/
-      - title: Learners Profile and Education
-        url: /departments/learners-profile-and-education-support
+      - title: Learner Profiles and Education
+        url: /departments/learner-profiles-and-education-support
   - title: Signature Programmes
     url: /signature-programmes/
     sublinks:
