--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -10,8 +10,7 @@ collections:
       - Science.md
       - Mother Tongue Languages.md
       - Physical & Health Education/.keep
-      - Physical & Health Education/Physical & Health Education, CCA &
-        Aesthetics.md
+      - Physical & Health Education/Physical & Health Education & CCA.md
       - Physical & Health Education/Love Dance, Love Life!.md
       - Physical & Health Education/GastroChef With A Cultural Twist.md
       - Physical & Health Education/Values in Action (VIA) in CCA.md
