--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -9,6 +9,7 @@ collections:
       - Mathematics.md
       - Science.md
       - Mother Tongue Languages.md
+      - Physical & Health Education/Example Title.md
       - Physical & Health Education/.keep
       - Physical & Health Education/Physical & Health Education & CCA.md
       - Physical & Health Education/Love Dance, Love Life!.md
