--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -6,7 +6,7 @@ collections:
       - Our Beliefs.md
       - Our Identity.md
       - School Leaders & Key Personnel.md
-      - Teaching Staff, AED and SEN Officers.md
+      - Teachers, AED and SEN Officers.md
       - Non Teaching Staff.md
       - SVPS School Virtual Tour.md
       - School Rules.md
