--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,8 +30,8 @@ links:
         url: /departments/science
       - title: Mother Tongue Languages
         url: /departments/mother-tongue-languages
-      - title: Physical & Health Education
-        url: /departments/physical-n-health-education-cca-n-aesthetics
+      - title: PHE & Aesthetics
+        url: /departments/phe-n-aesthetics
       - title: CIET
         url: /departments/curriculum-innovation-n-educational-technology
       - title: Pupil Well Being
