--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -10,7 +10,7 @@ collections:
       - Science.md
       - Mother Tongue Languages.md
       - PHE & Aesthetics/.keep
-      - PHE & Aesthetics/Physical & Health Education & CCA.md
+      - PHE & Aesthetics/PHE & Aesthetics.md
       - PHE & Aesthetics/Aesthetics.md
       - PHE & Aesthetics/Love Dance, Love Life!.md
       - PHE & Aesthetics/GastroChef With A Cultural Twist.md
