--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -82,8 +82,8 @@ links:
   - title: Info Hub
     url: /info-hub/weekly-notification
     sublinks:
-      - title: Weekly Notification
-        url: /info-hub/weekly-notification
+      - title: School Notification
+        url: /info-hub/school-notification
       - title: Calendar / Schedules
         url: /info-hub/calendar-schedules
       - title: School-related Services
