{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"834"}

--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Co Curricular Activities.md
       - Clubs & Societies/.keep
-      - Clubs & Societies/Library.md
+      - Clubs & Societies/Library Club.md
       - Clubs & Societies/Media Club.md
       - Clubs & Societies/Orators Club.md
       - Clubs & Societies/Robotics Club.md
