{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"834"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -20,7 +20,7 @@ collections:
       - "School Home Partnership: Homework Policy.md"
       - School Assessment Policy.md
       - MOE Sexuality Education in Schools.md
-      - P1 Registration/.keep
-      - P1 Registration/P1 Registration Exercise.md
-      - P1 Registration/Communication.md
+      - P1 Registration & PV scheme/.keep
+      - P1 Registration & PV scheme/P1 Registration Exercise.md
+      - P1 Registration & PV scheme/Communication.md
       - Contact Information.md
