--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -20,7 +20,7 @@ collections:
       - "School Home Partnership: Homework Policy.md"
       - School Assessment Policy.md
       - MOE Sexuality Education in Schools.md
-      - P1 Registration & PV scheme/.keep
-      - P1 Registration & PV scheme/P1 Registration Exercise.md
-      - P1 Registration & PV scheme/Communication.md
+      - P1 Registration&40Hr PV scheme/.keep
+      - P1 Registration&40Hr PV scheme/P1 Registration Exercise.md
+      - P1 Registration&40Hr PV scheme/Communication.md
       - Contact Information.md
