--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -100,7 +100,7 @@ links:
         url: /info-hub/school-assessment-policy
       - title: MOE Sexuality Education
         url: /departments/pupil-well-being/moe-sexuality-education-in-schools
-      - title: P1 Registration
+      - title: P1 Registration&40Hr PV scheme
         url: /info-hub/p1-registration/p1-registration-exercise
       - title: Contact Information
         url: /info-hub/contact-information
