--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -88,6 +88,8 @@ links:
         url: /info-hub/calendar-schedules
       - title: School-related Services
         url: /info-hub/school-related-services
+      - title: School Bus Service
+        url: /info-hub/school-bus-service/
       - title: SLS & Student iCON Matters
         url: /info-hub/student-learning-space-and-student-icon-matters-general
       - title: E-Forms
