{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"834"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -106,5 +106,7 @@ links:
         url: /info-hub/p1-registration/p1-registration-exercise
       - title: Contact Information
         url: /info-hub/contact-information
+      - title: School Canteen Advertisement
+        url: /info-hub/school-canteen-advertisement
   - title: MOE Kindergarten
     collection: moe-kindergarten
