{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"834"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - School Bus Service.md
       - School Canteen Advertisement.md
       - School Notification/.keep
       - School Notification/School Notification.md
