{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"834"}

--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -4,6 +4,7 @@ collections:
     order:
       - Student Development.md
       - Welcome Back To School.md
+      - P1 Transition Programme/School related Services.md
       - P1 Transition Programme/.keep
       - P1 Transition Programme/P1 Transition Programme.md
       - P1 Transition Programme/Preparing for P1.md
