{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"834"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -7,7 +7,7 @@ collections:
       - School Notification/Archived Letters.md
       - Calendar & Schedules.md
       - School Related Services/.keep
-      - School Related Services/School–related Services.md
+      - School Related Services/School related Services.md
       - School Related Services/Student Care Centre ProTeach.md
       - School Bus Service.md
       - School Canteen Advertisement.md
