{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"834"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -6,6 +6,8 @@ collections:
       - School Notification/School Notification.md
       - School Notification/Archived Letters.md
       - Calendar & Schedules.md
+      - School Related Services/Student Care Centre Singapore EduSmart Learning
+        Hub.md
       - School Related Services/.keep
       - School Related Services/School related Services.md
       - School Related Services/Student Care Centre ProTeach.md
