--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -8,7 +8,7 @@ collections:
       - Calendar & Schedules.md
       - School Related Services/.keep
       - School Related Services/School related Services.md
-      - School Related Services/Student Care Centre ProTeach.md
+      - School Related Services/Student Care Centre (ProTeach).md
       - School Related Services/Student Care Centre (Singapore EduSmart Learning
         Hub).md
       - School Bus Service.md
