{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"834"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -9,8 +9,8 @@ collections:
       - School Related Services/.keep
       - School Related Services/School related Services.md
       - School Related Services/Student Care Centre (ProTeach).md
-      - School Related Services/Student Care Centre (Singapore EduSmart Learning
-        Hub).md
+      - School Related Services/Student Care Centre 2024 (Singapore EduSmart
+        Learning Hub).md
       - School Bus Service.md
       - School Canteen Advertisement.md
       - SLS and Student Icon Matters/.keep
