--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Clubs & Societies/Library Club.md
       - Clubs & Societies/Media Club.md
       - Clubs & Societies/Robotics Club.md
-      - Clubs & Societies/Science Club.md
+      - Clubs & Societies/Environmental Science Club.md
       - Sports & Games/.keep
       - Sports & Games/Badminton.md
       - Sports & Games/Football.md
