--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -11,7 +11,7 @@ collections:
       - P1 Transition Programme/P1 Orientation.md
       - P1 Transition Programme/SVPS School Virtual Tour.md
       - P1 Transition Programme/SVPS Student Portal.md
-      - P1 Transition Programme/Students with Special Needs.md
+      - P1 Transition Programme/Students with Special Educational Needs.md
       - P1 Transition Programme/Information regarding starting Primary 1 in
         2023.md
       - Primary 6 Transition Programme – Ready, Sec, Go!.md
