--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -2,5 +2,6 @@ collections:
   moe-kindergarten:
     output: true
     order:
+      - K1 Transition.md
       - MOE Kindergarten @ South View.md
       - Information for Parents.md
