{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"834"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -2,6 +2,6 @@ collections:
   moe-kindergarten:
     output: true
     order:
-      - K1 Transition.md
+      - K1 Orientation.md
       - MOE Kindergarten @ South View.md
       - Information for Parents.md
