--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -2,6 +2,6 @@ collections:
   moe-kindergarten:
     output: true
     order:
-      - K1 Orientation.md
+      - MK@SV Orientation.md
       - MOE Kindergarten @ South View.md
       - Information for Parents.md
