--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,7 +2,7 @@ collections:
   about-us:
     output: true
     order:
-      - SVPS Message for 2023.md
+      - Message for School Website 2024.md
       - Our Beliefs.md
       - Our Identity.md
       - School Leaders & Key Personnel.md
