--- a/_our-partners/collection.yml
+++ b/_our-partners/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - School Advisory Committee.md
+      - Parents Association/Organisation Chart.md
       - Parents Association/SVPA Logo.md
       - Parents Association/About SVPA.md
       - Parents Association/SVPA Activities.md
