{"message":"Update file: collection.yml","userId":"1007","fileName":"collection.yml"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -2,5 +2,6 @@ collections:
   moe-kindergarten:
     output: true
     order:
+      - Open House.md
       - MOE Kindergarten @ South View.md
       - Information for Parents.md
