{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -4,4 +4,4 @@ collections:
     order:
       - MOE Kindergarten @ South View.md
       - Information for Parents.md
-      - Open House.md
+      - MK Resources.md
