--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -11,6 +11,5 @@ collections:
       - P1 Transition Programme/P1 Orientation.md
       - P1 Transition Programme/SVPS Student Portal.md
       - P1 Transition Programme/Students with Special Educational Needs.md
-      - P1 Transition Programme/Information regarding starting Primary 1 in
-        2024.md
+      - P1 Transition Programme/Information regarding starting Primary 1.md
       - Primary 6 Transition Programme – Ready, Sec, Go!.md
