--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - "School Home Partnership/School Home Partnership: Homework Policy.md"
       - School Home Partnership/.keep
       - School Notification/.keep
       - School Notification/School Notification.md
