--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -6,6 +6,7 @@ collections:
       - School Notification/School Notification.md
       - School Notification/Archived Letters.md
       - Calendar & Schedules.md
+      - School Related Services/Group Insurance for Students.md
       - School Related Services/.keep
       - School Related Services/School related Services.md
       - School Related Services/Student Care Centre (Singapore EduSmart Learning
