--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -16,7 +16,7 @@ collections:
       - SLS and Student Icon Matters/.keep
       - SLS and Student Icon Matters/Student Learning Space and Student iCON
         matters (General).md
-      - "SLS and Student Icon Matters/SLS: Getting Started.md"
+      - SLS and Student Icon Matters/Student Learning Space.md
       - "SLS and Student Icon Matters/SLS: Password Reset.md"
       - SLS and Student Icon Matters/Student iCON FAQs.md
       - E–Forms.md
