{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -14,8 +14,7 @@ collections:
       - School Bus Service.md
       - School Canteen Advertisement.md
       - SLS and Student Icon Matters/.keep
-      - SLS and Student Icon Matters/Student Learning Space and Student iCON
-        matters (General).md
+      - SLS and Student Icon Matters/SLS and Student iCON Matters.md
       - SLS and Student Icon Matters/Student Learning Space.md
       - "SLS and Student Icon Matters/SLS: Password Reset.md"
       - SLS and Student Icon Matters/Student iCON FAQs.md
