--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -30,4 +30,4 @@ collections:
       - Pupil Well Being/The Oasis (Learning Space).md
       - Character & Citizenship Education.md
       - Student Development.md
-      - Learner Profiles and Educational Support.md
+      - Special Education Needs and Support in Education.md
