{"message":"Update file: navigation.yml","userId":"3707","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,8 +38,8 @@ links:
         url: /departments/character-n-citizenship-education
       - title: Student Development
         url: /student-development/
-      - title: LPES
-        url: /departments/learner-profiles-and-educational-support
+      - title: SENSE
+        url: /departments/special-education-needs-and-support-in-education/
   - title: Signature Programmes
     url: /signature-programmes/
     sublinks:
