--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -2,6 +2,7 @@ collections:
   moe-kindergarten:
     output: true
     order:
+      - MK@South View (MK@SV)/.keep
       - MOE Kindergarten @ South View.md
       - Information for Parents.md
       - MK Resources.md
