--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -2,6 +2,7 @@ collections:
   student-development:
     output: true
     order:
+      - NYAA@SVPS.md
       - Student Development.md
       - Welcome Back To School.md
       - P1 Transition Programme/.keep
