{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_signature-programmes/collection.yml
+++ b/_signature-programmes/collection.yml
@@ -7,4 +7,4 @@ collections:
       - (ALP) Sustaining Gaia.md
       - P1 Transition Programme.md
       - P6 Transition Programme.md
-      - GastroChef With A Cultural Twist.md
+      - GastroChef Programme.md
