{"message":"Update file: navigation.yml","userId":"3707","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,8 +51,8 @@ links:
         url: /student-development/p1-transition-programme/
       - title: P6 Transition Programme
         url: /student-development/primary-6-transition-programme-ready-sec-go/
-      - title: GastroChef
-        url: /signature-programmes/physical-n-health-education-cca-n-aesthetics/gastrochef-with-a-cultural-twist
+      - title: GastroChef Programme
+        url: /signature-programmes/physical-n-health-education-cca-n-aesthetics/gastrochef-programme/
   - title: CCAs
     url: /co-curricular-activities
     sublinks:
