{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -13,7 +13,7 @@ collections:
       - PHE & Aesthetics/Physical & Health Education.md
       - PHE & Aesthetics/Aesthetics.md
       - PHE & Aesthetics/Love Dance, Love Life!.md
-      - PHE & Aesthetics/GastroChef With A Cultural Twist.md
+      - PHE & Aesthetics/GastroChef Programme.md
       - PHE & Aesthetics/Values in Action (VIA) in CCA.md
       - PHE & Aesthetics/Programme for Active Learning (PAL).md
       - CIET/.keep
