{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -14,7 +14,7 @@ collections:
       - Sports & Games/Football.md
       - Sports & Games/Multi Sports.md
       - Sports & Games/Netball.md
-      - Student Leadership.md
+      - Student Leadership @ SVPS.md
       - Uniformed Groups/.keep
       - Uniformed Groups/Boys' Brigade & Girls' Brigade.md
       - Uniformed Groups/Scouts.md
