{"message":"Update file: navigation.yml","userId":"3707","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -86,6 +86,8 @@ links:
         url: /info-hub/calendar-schedules
       - title: School related Services
         url: /info-hub/school-related-services/school-related-services/
+      - title: POSB Smart Buddy
+        url: /info-hub/posb-smart-buddy
       - title: School Bus Service
         url: /info-hub/school-bus-service/
       - title: School Canteen Advertisement
