{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -12,7 +12,7 @@ collections:
       - School Related Services/Student Care Centre (Singapore EduSmart Learning
         Hub).md
       - POSB Smart Buddy.md
-      - School Bus Service.md
+      - School Bus Advertisement.md
       - School Canteen Advertisement.md
       - SLS and Student Icon Matters/.keep
       - SLS and Student Icon Matters/SLS and Student iCON Matters.md
