{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - School Policies/.keep
       - School Notification/.keep
       - School Notification/School Notification.md
       - School Notification/Archived Letters.md
