{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -23,6 +23,7 @@ collections:
       - School Home Partnership/.keep
       - School Home Partnership/Homework Policy.md
       - School Home Partnership/Resources for Parents.md
+      - School Policies/School Assessment Policy.md
       - School Policies/.keep
       - MOE Sexuality Education in Schools.md
       - P1 Registration&40Hr PV scheme/.keep
