--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -24,6 +24,7 @@ collections:
       - School Home Partnership/.keep
       - School Home Partnership/Homework Policy.md
       - School Home Partnership/Resources for Parents.md
+      - School Policies/Acceptable Use Policy (AUP).md
       - School Policies/School Assessment Policy.md
       - School Policies/.keep
       - MOE Sexuality Education in Schools.md
