--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -100,7 +100,7 @@ links:
         url: /info-hub/road-safety-and-security
       - title: School-Home-Partnership
         url: /info-hub/school-home-partnership/homework-policy
-      - title: School Assessment Policy
+      - title: School Policies
         url: /info-hub/school-assessment-policy
       - title: MOE Sexuality Education
         url: /departments/pupil-well-being/moe-sexuality-education-in-schools
