{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -2,6 +2,7 @@ collections:
   student-development:
     output: true
     order:
+      - P1page.md
       - Student Development.md
       - Welcome Back To School.md
       - P1 Transition Programme/.keep
