{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -8,6 +8,7 @@ collections:
       - Clubs & Societies/Library Club.md
       - Clubs & Societies/Media Club.md
       - Clubs & Societies/Robotics Club.md
+      - Sports & Games/Basketball.md
       - Sports & Games/.keep
       - Sports & Games/Badminton.md
       - Sports & Games/Floorball.md
