{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -17,7 +17,7 @@ collections:
       - Sports & Games/Netball.md
       - Student Leadership @ SVPS.md
       - Uniformed Groups/.keep
-      - Uniformed Groups/Boys' Brigade & Girls' Brigade.md
+      - Uniformed Groups/Boys' Brigade.md
       - Uniformed Groups/Scouts.md
       - Visual & Performing Arts/.keep
       - Visual & Performing Arts/Art Club.md
