{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -16,6 +16,7 @@ collections:
       - Sports & Games/Multi Sports.md
       - Sports & Games/Netball.md
       - Student Leadership @ SVPS.md
+      - Uniformed Groups/Girls' Brigade.md
       - Uniformed Groups/.keep
       - Uniformed Groups/Boys' Brigade.md
       - Uniformed Groups/Scouts.md
