{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Co Curricular Activities.md
       - Clubs & Societies/.keep
       - Clubs & Societies/Environmental Science Club.md
-      - Clubs & Societies/Library Club.md
+      - Clubs & Societies/Media Resource Library Club.md
       - Clubs & Societies/Media Club.md
       - Clubs & Societies/Robotics Club.md
       - Sports & Games/.keep
