{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,7 +2,7 @@ collections:
   about-us:
     output: true
     order:
-      - Message for School Website 2025.md
+      - SVPS School Website Message for 2026.md
       - Our Beliefs.md
       - Our Identity.md
       - School Leaders & Key Personnel.md
