{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Motivation and Engagement.md
       - Departments.md
       - English Language/.keep
       - English Language/English Language.md
