{"message":"Update file: navigation.yml","userId":"3707","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,6 +40,8 @@ links:
         url: /student-development/
       - title: SENSE
         url: /departments/special-education-needs-and-support-in-education/
+      - title: Motivation and Engagement
+        url: /permalink
   - title: Signature Programmes
     url: /signature-programmes/
     sublinks:
