--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -41,7 +41,7 @@ links:
       - title: SENSE
         url: /departments/special-education-needs-and-support-in-education/
       - title: Motivation and Engagement
-        url: /permalink
+        url: /motivation-and-engagement/student-leadership-svps/
   - title: Signature Programmes
     url: /signature-programmes/
     sublinks:
