{"message":"Update file: collection.yml","userId":"3707","fileName":"collection.yml"}

--- a/_motivation-and-engagement/collection.yml
+++ b/_motivation-and-engagement/collection.yml
@@ -2,6 +2,7 @@ collections:
   motivation-and-engagement:
     output: true
     order:
+      - Power in Me Day.md
       - Motivation And Engagement.md
       - Student Agency @ SVPS.md
       - Student Leadership @ SVPS.md
