--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -2,6 +2,7 @@ collections:
   moe-kindergarten:
     output: true
     order:
+      - Open House.md
       - MK@South View (MK@SV)/.keep
       - MK@South View (MK@SV)/Welcome.md
       - MK@South View (MK@SV)/Our MK@SV Team.md
